--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "clipboard": "^2.0.4",
     "element-ui": "^2.4.11",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "live-server": "^1.2.0",
-    "nuxt": "^1.0.0"
+    "nuxt": "^1.0.0",
+    "vue-swiper-component": "^2.1.3"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
