--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "js-cookie": "^2.2.0",
     "live-server": "^1.2.0",
     "nuxt": "^1.0.0",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-swiper-component": "^2.1.3"
   },
   "devDependencies": {
